--- a/Valuator/Pages/Index.cshtml
+++ b/Valuator/Pages/Index.cshtml
@@ -9,6 +9,15 @@
         <div class="col-2">Текст для оценки:</div>
         <div class="col-10">
             <textarea name="text" rows="5" cols="50"></textarea>
+            <div class="col-10">
+                <select name="country">
+                    <option value="russia">Russia</option>
+                    <option value="france">France</option>
+                    <option value="germany">Germany</option>
+                    <option value="usa">USA</option>
+                    <option value="india">India</option>
+                </select>
+            </div>
             <input type="submit" />
         </div>
     </form>
